# microblog

./:  sonar-project.properties  .gitignore  Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/actions/spelling/: advice.md  excludes  expect.txt
.github/workflows/: CI.YAML  Spell-checker.yml  Spell-cheker.YAML  build.yml  continious-integration.yml  continous-integration.yml
.github/workflows/workflows/: continous-integration.yml
Documentation/: README.md  app.rst  microblog.rst  modules.rst
Documentation/source/: conf.py  index.rst
app/: __init__.py  models.py  routes.py
app/templates/: base.html  index.html  login.html  register.html
migrations/versions/: 315c80da078a_posts_table.py  b1d826c7f739_users_table.py
