[tool.poetry]
name = "Microblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
WTForms = "^3.0.1"
Flask-WTF = "^1.0.1"
pyspelling = "^2.7.3"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
lxml = "4.9.1"
cleo = "^2.0.0"
Flask-Login = "^0.6.2"
python-dotenv = "^0.20.0"
email-validator = "^1.2.1"
black = "^22.10.0"

[tool.poetry.dev-dependencies]
Flask = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
